# DiffusedLemon

./: .gitignore  DESIGN.md  README.md  server.py
frontend/: index.html
middleware/: __init__.py  config.py  diffused-lemon.service  image_storage.py  logger.py  pyproject.toml  server.py
middleware/middleware/: __init__.py
