[project]
name = "diffused-lemon"
version = "0.1.0"
description = "AI Image Generator Middleware"
requires-python = ">=3.8"
dependencies = [
    "aiohttp",
    "Pillow",
]

[project.scripts]
diffused-lemon = "middleware.server:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
